<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                style="@style/CreateFoodDialog.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_dialog_create_food_fragment_header"
                android:textAlignment="center"
                android:textSize="20sp" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_dialog_create_food_name"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_name_hint"
                    android:inputType="text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_dialog_create_food_measurement_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:spinnerMode="dropdown"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_dialog_create_food_quantity"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_quantity_hint"
                    android:inputType="number"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_dialog_create_food_measurement_type"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <EditText
                    android:id="@+id/et_dialog_create_food_carbs"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_carbs_hint"
                    android:text="@string/et_dialog_create_food_fragment_carbs_default"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_dialog_create_food_fats"
                    app:layout_constraintStart_toEndOf="@+id/et_dialog_create_food_protein"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_dialog_create_food_fats"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_fats_hint"
                    android:text="@string/et_dialog_create_food_fragment_fats_default"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_dialog_create_food_calories"
                    app:layout_constraintStart_toEndOf="@+id/et_dialog_create_food_carbs"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_dialog_create_food_calories"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_calories_hint"
                    android:text="@string/et_dialog_create_food_fragment_calories_default"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/et_dialog_create_food_fats"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.533" />

                <EditText
                    android:id="@+id/et_dialog_create_food_protein"
                    style="@style/CreateFoodDialog.EditText"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/et_dialog_create_food_fragment_protein_hint"
                    android:text="@string/et_dialog_create_food_fragment_protein_default"
                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/et_dialog_create_food_carbs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btn_dialog_create_food_save"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/dialog_create_food_save" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_dialog_create_food"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </android.support.v7.widget.CardView>
</RelativeLayout>